fixed scrollbar

--- a/src/Client/wwwroot/app.css
+++ b/src/Client/wwwroot/app.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+  scrollbar-width: none;
+  scrollbar-color: transparent transparent;
+}
+
 html, body {
   font-family: 'Inter var', sans-serif;
 }
